--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZYP1NL9N4"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+   
+     gtag('config', 'G-6ZYP1NL9N4');
+    </script>
+
 <title>Practice 1 - html</title>
 <meta charset="utf-8">
 </head>
@@ -20,4 +30,5 @@ and can be accessed via the Internet.[1] English scientist Tim Berners-Lee inven
 in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.
 [2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting
 in January 1991 and to the general public on the Internet in August 1991.
+
 </body></html>
