--- a/3.html
+++ b/3.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZYP1NL9N4"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+   
+     gtag('config', 'G-6ZYP1NL9N4');
+    </script>
+
 <title>Practice 1 - html</title>
 <meta charset="utf-8">
 </head>
